[package]
name = "wpilog-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/oh-yes-0-fps/wpilog-rs"
description = "An implementation of WPI's DataLog spec"

[dependencies]
bimap = "0.6.3"
serde = { version = "^1", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


[features]
tracing = []

#enable tracing feature for tests
[dev-dependencies]
wpilog-rs = { path = ".", features = ["tracing"] }


[profile.release]
lto = true
