[package]
name = "wpilog"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/oh-yes-0-fps/wpilog-rs"
description = "An implementation of WPI's DataLog spec"

[dependencies]
bimap = "0.6.3"
serde = { version = "^1", features = ["derive"] }
thiserror = "1.0.40"
tracing = { version = "0.1.37", optional = true }
single_value_channel = "1.2.2"
frcv = "0.1.0"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

#enable tracing feature for tests
[dev-dependencies]
tracing-subscriber = "0.3.17"
wpilog = { path = ".", features = ["tracing"] }
serde_json = "1"

[profile.release]
lto = true
